fix: padding (scrollbar)

--- a/src/app/home/home/home.component.scss
+++ b/src/app/home/home/home.component.scss
@@ -19,6 +19,6 @@
     flex-direction: row;
     align-items: flex-end;
     gap: 386px;
-    padding: 252px 0 132px 164px;
+    padding: 252px 0 130px 164px;
   }
 }
